web/wp-content/themes/lfevents/src/assets/scss/modules/_event-calendar.scss
.event-calendar-year {
  // padding: 0.25rem 0 0;
  margin-bottom: $global-margin * 1.5;
  font-size: rem-calc(20);
  font-weight: $global-weight-bold;
  border-bottom: 3px solid $gray;
  color: $charcoal;
}

.callout + .event-calendar-year {
  margin-top: 2rem;
}

.event-calendar-month {
  border-top: $hr-border;
  margin-top: 1rem;
  padding-top: 1rem;
  font-size: rem-calc(25);
}

.event-calendar-year + .event-calendar-month {
  border-top: none;
  margin-top: 0;
  padding-top: 0;
}

.event-calendar-container {

  @include breakpoint(large) {
    @include xy-grid($direction:horizontal, $wrap:true);
    @include xy-gutters($negative:true);
  }

  form.searchandfilter {

    #switch-archive-view {
      font-weight: $global-weight-bold;
      margin-bottom: 2rem;
    }

    > ul {
      margin-left: 0;

      > li {
        padding: 0;
        margin: 0 0 1rem;
      }

      input:focus {
        box-shadow: none;
      }

      .chosen-container {
        width: 100% !important;
        font-size: inherit;

        .chosen-single {
          border-radius: 0;
          background: $white;
        }

        .chosen-drop {
          border-radius: 0;
          box-shadow: 0 0.25rem 0 0 rgba(0,0,0,0.2);
        }
      }

      .search-filter-reset {
        @include button($expand:true, $background:$white-smoke, $background-hover:darken($white-smoke,3%), $color:$primary-color, $style:solid);
        margin-top: 2rem;
        border-radius: rem-calc(8);
        box-shadow: 0 0.25em 0 0 rgba(0,0,0,0.1);
      }
    }

    @include breakpoint(large) {
      @include xy-cell(4);
      order: 2;
    }
  }

  .search-filter-results {
    @include breakpoint(large) {
      @include xy-cell(8);
      order: 1;
    }
  }
}

